--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-      - name: Discord Push
+      - name: Discord Action
         uses: sarisia/actions-status-discord@v1
         if: always()
         with:
