--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jouhouhan HomePage",
+  "name": "Jouhouhan_HomePage",
   "version": "1.0.0",
   "repository": "git@github.com:FukukouSSJouhou/FukukouSSJouhou.github.io.git",
   "author": "jouhouhan",
