--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "repository": "git@github.com:FukukouSSJouhou/FukukouSSJouhou.github.io.git",
   "author": "jouhouhan",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^4.6.2"
+  }
 }
