--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "author": "jouhouhan",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^17.0.41",
+    "@types/react-dom": "^17.0.14",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
