--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
-    "build": "webpack  --progress --color",
-    "start": "cross-env NODE_ENV=\"development\" webpack-dev-server"
+    "build": "webpack -c webpack.release.config.js  --progress --color",
+    "start": "cross-env NODE_ENV=\"development\"  webpack-dev-server -c webpack.dev.config.js"
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
